# unusual-spending-kata

./: pyproject.toml
src/credit_repository/: credit_repository.py
src/domain/: credit_history.py  month_status.py  payment.py
src/interfaces/presenters/: email_service.py
src/main/: main.py
src/usecase/: payment_usecase.py
test/acceptance/: test_filter_down_to_the_categories_of_user_spending.py
test/unit/: conftest.py
test/unit/interfaces/presenters/: test_email_service.py
test/unit/repository/: test_credit_repository.py
test/unit/usecase/: test_payment_usecase.py
